--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -636,6 +636,7 @@
                     <connections>
                         <outlet property="baseCollectionView" destination="sd2-Iu-7W4" id="7lI-G3-Khk"/>
                         <outlet property="homeActivityIndicator" destination="SPY-Qe-p1f" id="fEK-Zs-TmG"/>
+                        <segue destination="5Xq-SF-pzA" kind="show" identifier="categorySegue" id="aCF-eo-sAT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d4P-7d-g4R" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -782,7 +783,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GQL-4X-YU2">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="barracaCell" rowHeight="120" id="Cyz-iL-RO7" customClass="BarracasTableViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
@@ -996,7 +997,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="4YU-rn-3QO"/>
-        <segue reference="6xs-oa-Eow"/>
+        <segue reference="aCF-eo-sAT"/>
         <segue reference="GOj-34-Pew"/>
     </inferredMetricsTieBreakers>
 </document>
