--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appIcon" translatesAutoresizingMaskIntoConstraints="NO" id="BPe-7l-bke">
-                                <rect key="frame" x="65" y="126" width="245" height="245"/>
+                                <rect key="frame" x="65" y="126" width="245" height="245.00000000000006"/>
                                 <color key="backgroundColor" red="1" green="0.86274509803921573" blue="0.10980392156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="BPe-7l-bke" secondAttribute="height" multiplier="1:1" id="h3Q-jR-AMV"/>
@@ -140,7 +140,7 @@
                                         <color key="backgroundColor" name="quaternaryLabelColor" catalog="System" colorSpace="catalog"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contraseña" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xZ3-ls-c5H">
                                         <rect key="frame" x="35" y="165" width="160.5" height="24"/>
@@ -249,7 +249,7 @@
                                         <color key="backgroundColor" name="quaternaryLabelColor" catalog="System" colorSpace="catalog"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qWY-if-x1q">
                                         <rect key="frame" x="30" y="124.5" width="92.5" height="20.5"/>
@@ -602,9 +602,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="cR6-tR-PTV">
-                                <rect key="frame" x="177" y="323" width="20" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="cR6-tR-PTV">
+                                <rect key="frame" x="177.5" y="331" width="20" height="20"/>
                             </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2IW-qn-uYe">
                                 <rect key="frame" x="60" y="537" width="255" height="30"/>
@@ -623,12 +622,14 @@
                         <constraints>
                             <constraint firstItem="2IW-qn-uYe" firstAttribute="top" secondItem="QdM-Wa-hI0" secondAttribute="bottom" constant="90" id="DON-dK-eLc"/>
                             <constraint firstItem="f0X-rk-bG2" firstAttribute="top" secondItem="Btx-4P-0so" secondAttribute="top" constant="60" id="MFH-nV-4iQ"/>
+                            <constraint firstItem="cR6-tR-PTV" firstAttribute="centerX" secondItem="Btx-4P-0so" secondAttribute="centerX" id="Mzm-zg-cca"/>
                             <constraint firstItem="f0X-rk-bG2" firstAttribute="leading" secondItem="Btx-4P-0so" secondAttribute="leading" constant="60" id="Vfc-c9-eHg"/>
                             <constraint firstItem="2IW-qn-uYe" firstAttribute="centerX" secondItem="Btx-4P-0so" secondAttribute="centerX" id="Zu6-N4-4Ne"/>
                             <constraint firstItem="QdM-Wa-hI0" firstAttribute="trailing" secondItem="f0X-rk-bG2" secondAttribute="trailing" id="kmL-VV-ggl"/>
                             <constraint firstItem="QdM-Wa-hI0" firstAttribute="leading" secondItem="f0X-rk-bG2" secondAttribute="leading" id="r7S-ck-OhK"/>
                             <constraint firstItem="QdM-Wa-hI0" firstAttribute="top" secondItem="f0X-rk-bG2" secondAttribute="bottom" constant="45" id="ttU-TX-9Od"/>
                             <constraint firstItem="f0X-rk-bG2" firstAttribute="centerX" secondItem="Btx-4P-0so" secondAttribute="centerX" id="uF9-wi-iFk"/>
+                            <constraint firstItem="cR6-tR-PTV" firstAttribute="centerY" secondItem="Btx-4P-0so" secondAttribute="centerY" id="uqB-i4-bSY"/>
                             <constraint firstItem="2IW-qn-uYe" firstAttribute="leading" secondItem="f0X-rk-bG2" secondAttribute="leading" id="vnv-e9-8mc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Btx-4P-0so"/>
@@ -653,8 +654,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RHx-If-48l">
+                                <rect key="frame" x="10" y="266" width="355" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="23T-WO-H8S"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GQL-4X-YU2">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="barracaCell" rowHeight="120" id="Cyz-iL-RO7" customClass="BarracasTableViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
@@ -724,21 +734,48 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="RHx-If-48l" firstAttribute="centerX" secondItem="ye6-Ge-9d7" secondAttribute="centerX" id="4E7-VP-ilT"/>
+                            <constraint firstItem="ye6-Ge-9d7" firstAttribute="trailing" secondItem="RHx-If-48l" secondAttribute="trailing" constant="10" id="IyE-od-gNQ"/>
                             <constraint firstItem="GQL-4X-YU2" firstAttribute="leading" secondItem="ye6-Ge-9d7" secondAttribute="leading" id="PTl-kl-ZCh"/>
+                            <constraint firstItem="RHx-If-48l" firstAttribute="leading" secondItem="ye6-Ge-9d7" secondAttribute="leading" constant="10" id="WTc-e0-wYc"/>
                             <constraint firstItem="GQL-4X-YU2" firstAttribute="centerX" secondItem="ye6-Ge-9d7" secondAttribute="centerX" id="XLy-wL-N5I"/>
                             <constraint firstItem="GQL-4X-YU2" firstAttribute="centerY" secondItem="ye6-Ge-9d7" secondAttribute="centerY" id="Zd2-EY-57i"/>
+                            <constraint firstItem="RHx-If-48l" firstAttribute="centerY" secondItem="ye6-Ge-9d7" secondAttribute="centerY" id="hgB-QJ-gbT"/>
                             <constraint firstItem="GQL-4X-YU2" firstAttribute="top" secondItem="ye6-Ge-9d7" secondAttribute="top" id="laV-mD-FZM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ye6-Ge-9d7"/>
                     </view>
                     <navigationItem key="navigationItem" id="nob-qb-PCT"/>
                     <connections>
+                        <outlet property="barracasNotFoundLabel" destination="RHx-If-48l" id="SDy-uB-NGc"/>
                         <outlet property="barracasTableView" destination="GQL-4X-YU2" id="rdh-sb-TvX"/>
+                        <segue destination="p4O-0T-OgJ" kind="show" id="HbJ-58-p6F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dnG-KF-MeS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1677.5999999999999" y="852.3238380809596"/>
+        </scene>
+        <!--Barraca View Controller-->
+        <scene sceneID="IvG-Nn-nUd">
+            <objects>
+                <viewController id="p4O-0T-OgJ" customClass="BarracaViewController" customModule="UnderConstructionApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="41U-fG-XeF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eTk-Ch-X3t">
+                                <rect key="frame" x="0.0" y="64" width="375" height="152"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="bUl-WE-aUs"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HIX-Gm-Izc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2509.5999999999999" y="856.82158920539734"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="zdT-Ye-W9h">
@@ -867,8 +904,8 @@
         <image name="usuario" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4YU-rn-3QO"/>
-        <segue reference="aCF-eo-sAT"/>
-        <segue reference="GOj-34-Pew"/>
+        <segue reference="n17-Rb-B2k"/>
+        <segue reference="6xs-oa-Eow"/>
+        <segue reference="bcT-yV-Wuq"/>
     </inferredMetricsTieBreakers>
 </document>
