--- a/UnderConstructionApp/Views/Base.lproj/Main.storyboard
+++ b/UnderConstructionApp/Views/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appIcon" translatesAutoresizingMaskIntoConstraints="NO" id="BPe-7l-bke">
-                                <rect key="frame" x="65" y="126" width="245" height="245.00000000000006"/>
+                                <rect key="frame" x="65" y="126" width="245" height="245"/>
                                 <color key="backgroundColor" red="1" green="0.86274509803921573" blue="0.10980392156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="BPe-7l-bke" secondAttribute="height" multiplier="1:1" id="h3Q-jR-AMV"/>
@@ -655,7 +655,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RHx-If-48l">
-                                <rect key="frame" x="10" y="266" width="355" height="150"/>
+                                <rect key="frame" x="10" y="244" width="355" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="23T-WO-H8S"/>
                                 </constraints>
@@ -664,7 +664,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GQL-4X-YU2">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="barracaCell" rowHeight="120" id="Cyz-iL-RO7" customClass="BarracasTableViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
@@ -676,7 +676,7 @@
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cxo-KY-hyK">
                                                     <rect key="frame" x="10" y="5" width="110" height="110"/>
-                                                    <color key="backgroundColor" white="0.81280322488584467" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="cxo-KY-hyK" secondAttribute="height" multiplier="1:1" id="SSE-YP-zDF"/>
                                                     </constraints>
@@ -749,7 +749,7 @@
                     <connections>
                         <outlet property="barracasNotFoundLabel" destination="RHx-If-48l" id="SDy-uB-NGc"/>
                         <outlet property="barracasTableView" destination="GQL-4X-YU2" id="rdh-sb-TvX"/>
-                        <segue destination="p4O-0T-OgJ" kind="show" id="HbJ-58-p6F"/>
+                        <segue destination="p4O-0T-OgJ" kind="show" identifier="toBarracaDetails" id="HbJ-58-p6F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dnG-KF-MeS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -764,14 +764,98 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eTk-Ch-X3t">
-                                <rect key="frame" x="0.0" y="64" width="375" height="152"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="30X-IW-XtL">
+                                <rect key="frame" x="0.0" y="270" width="375" height="348"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="aiK-CA-7cF">
+                                    <size key="itemSize" width="166" height="230"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="barracaProductCell" id="Boe-0f-4y9" customClass="BarracaProductCollectionViewCell" customModule="UnderConstructionApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="166" height="230"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="166" height="230"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ivD-6F-Z8D">
+                                                    <rect key="frame" x="10" y="10" width="146" height="146"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="ivD-6F-Z8D" secondAttribute="height" multiplier="1:1" id="o1p-mk-EYJ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42V-kr-efX">
+                                                    <rect key="frame" x="20" y="193" width="43.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOH-Ia-cyh">
+                                                    <rect key="frame" x="20" y="164" width="43.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="ivD-6F-Z8D" firstAttribute="centerX" secondItem="Boe-0f-4y9" secondAttribute="centerX" id="1Nn-Ls-Ojf"/>
+                                            <constraint firstItem="ivD-6F-Z8D" firstAttribute="top" secondItem="Boe-0f-4y9" secondAttribute="top" constant="10" id="2pT-wT-xV3"/>
+                                            <constraint firstItem="42V-kr-efX" firstAttribute="leading" secondItem="dOH-Ia-cyh" secondAttribute="leading" id="8ed-tA-gJz"/>
+                                            <constraint firstItem="dOH-Ia-cyh" firstAttribute="top" secondItem="ivD-6F-Z8D" secondAttribute="bottom" constant="8" id="Hmn-ue-AvI"/>
+                                            <constraint firstItem="42V-kr-efX" firstAttribute="trailing" secondItem="dOH-Ia-cyh" secondAttribute="trailing" id="MWl-7f-gaX"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dOH-Ia-cyh" secondAttribute="trailing" constant="10" id="Z05-oj-pCN"/>
+                                            <constraint firstItem="42V-kr-efX" firstAttribute="top" secondItem="dOH-Ia-cyh" secondAttribute="bottom" constant="8" id="Zc1-mx-KrZ"/>
+                                            <constraint firstItem="dOH-Ia-cyh" firstAttribute="leading" secondItem="Boe-0f-4y9" secondAttribute="leading" constant="20" id="hUi-We-x5o"/>
+                                            <constraint firstItem="ivD-6F-Z8D" firstAttribute="leading" secondItem="Boe-0f-4y9" secondAttribute="leading" constant="10" id="m6z-3W-8qf"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="productImageView" destination="ivD-6F-Z8D" id="u9U-gb-j1j"/>
+                                            <outlet property="productNameLabel" destination="dOH-Ia-cyh" id="ou7-19-IzA"/>
+                                            <outlet property="productPriceLabel" destination="42V-kr-efX" id="5oK-AS-Dk3"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="p4O-0T-OgJ" id="38Z-Ms-Gmr"/>
+                                    <outlet property="delegate" destination="p4O-0T-OgJ" id="pBZ-0Y-JWD"/>
+                                </connections>
+                            </collectionView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pXb-bG-MAm">
+                                <rect key="frame" x="10" y="20" width="355" height="206"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Productos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfl-pt-b8W">
+                                <rect key="frame" x="30" y="236" width="315" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="30X-IW-XtL" firstAttribute="leading" secondItem="bUl-WE-aUs" secondAttribute="leading" id="3Oy-3K-IyR"/>
+                            <constraint firstItem="pXb-bG-MAm" firstAttribute="leading" secondItem="bUl-WE-aUs" secondAttribute="leading" constant="10" id="4T9-fO-iYr"/>
+                            <constraint firstItem="30X-IW-XtL" firstAttribute="top" secondItem="Kfl-pt-b8W" secondAttribute="bottom" constant="10" id="5Bq-Rc-s93"/>
+                            <constraint firstItem="Kfl-pt-b8W" firstAttribute="top" secondItem="pXb-bG-MAm" secondAttribute="bottom" constant="10" id="6Be-th-FJF"/>
+                            <constraint firstItem="Kfl-pt-b8W" firstAttribute="leading" secondItem="bUl-WE-aUs" secondAttribute="leading" constant="30" id="IDL-VM-VaC"/>
+                            <constraint firstItem="30X-IW-XtL" firstAttribute="centerX" secondItem="bUl-WE-aUs" secondAttribute="centerX" id="N8k-CS-Ni2"/>
+                            <constraint firstItem="bUl-WE-aUs" firstAttribute="bottom" secondItem="30X-IW-XtL" secondAttribute="bottom" id="PTX-KH-eCL"/>
+                            <constraint firstItem="30X-IW-XtL" firstAttribute="width" secondItem="41U-fG-XeF" secondAttribute="width" id="Q7h-g5-ZmX"/>
+                            <constraint firstItem="bUl-WE-aUs" firstAttribute="trailing" secondItem="Kfl-pt-b8W" secondAttribute="trailing" constant="30" id="RWy-OF-miL"/>
+                            <constraint firstItem="pXb-bG-MAm" firstAttribute="centerX" secondItem="bUl-WE-aUs" secondAttribute="centerX" id="bOa-DA-q7k"/>
+                            <constraint firstItem="30X-IW-XtL" firstAttribute="top" secondItem="bUl-WE-aUs" secondAttribute="top" constant="250" id="cbo-1R-t1S"/>
+                            <constraint firstItem="pXb-bG-MAm" firstAttribute="top" secondItem="bUl-WE-aUs" secondAttribute="top" id="eXE-cN-9Nt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="bUl-WE-aUs"/>
                     </view>
+                    <connections>
+                        <outlet property="logoImageView" destination="pXb-bG-MAm" id="Uak-sN-s1V"/>
+                        <outlet property="productsCollectionView" destination="30X-IW-XtL" id="afv-iO-64i"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HIX-Gm-Izc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -905,7 +989,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="n17-Rb-B2k"/>
-        <segue reference="6xs-oa-Eow"/>
+        <segue reference="aCF-eo-sAT"/>
         <segue reference="bcT-yV-Wuq"/>
     </inferredMetricsTieBreakers>
 </document>
